--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
       rel="stylesheet"
       href="https://unpkg.com/flowbite@1.5.1/dist/flowbite.min.css"
     />
+    <script src="https://cdn.tailwindcss.com"></script>
+
     {% block head %} {% endblock %}
   </head>
   <body>
