--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,31 @@
 {% extends 'base.html' %} {% block body %}
-<form action="/upload" method="POST" enctype="multipart/form-data">
-  <label
-    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-    for="user_avatar"
-    >Upload file</label
-  >
-  <input
-    class="block w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 cursor-pointer dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
-    aria-describedby="user_avatar_help"
-    id="user_avatar"
-    type="file"
-    name="file"
-  />
-  <div
-    class="mt-1 text-sm text-gray-500 dark:text-gray-300"
-    id="user_avatar_help"
-  >
-    Add your picture
-  </div>
-  <button
-    type="submit"
-    class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"
-  >
-    Apply
-  </button>
-</form>
+<div style="margin: 5em">
+  <form action="/upload" method="POST" enctype="multipart/form-data">
+    <label
+      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+      for="user_avatar"
+      >Upload file</label
+    >
+    <input
+      class="w-5 block w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 cursor-pointer dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
+      aria-describedby="user_avatar_help"
+      id="user_avatar"
+      type="file"
+      name="file"
+    />
+    <div
+      class="mt-1 text-sm text-gray-500 dark:text-gray-300"
+      id="user_avatar_help"
+    >
+      Add your picture
+    </div>
+    <button
+      type="submit"
+      class="mt-3 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"
+    >
+      Apply
+    </button>
+  </form>
+</div>
+
 {% endblock %}
